// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`emitApi golden output > default (plain fetch) 1`] = `
"// Generated by @dudousxd/nestjs-codegen. Do not edit.

import { route, ROUTES, type RouteName, type ExtractParams, type RouteParams } from './routes.js';
import type { Fetcher } from '@dudousxd/nestjs-client';

export type ApiRouter = {
  users: {
    list: { method: "GET"; url: "/api/users"; params: never; query: { active?: boolean }; body: never; response: User[]; error: unknown; filterFields: never; stream: false };
    show: { method: "GET"; url: "/api/users/:id"; params: { id: string }; query: never; body: never; response: User; error: unknown; filterFields: never; stream: false };
    create: { method: "POST"; url: "/api/users"; params: never; query: never; body: { name: string }; response: User; error: unknown; filterFields: never; stream: false };
    update: { method: "PATCH"; url: "/api/users/:id"; params: { id: string }; query: never; body: { name?: string }; response: User; error: unknown; filterFields: never; stream: false };
  };
  admin: {
    reports: {
      list: { method: "GET"; url: "/api/admin/reports"; params: never; query: never; body: never; response: Report[]; error: unknown; filterFields: never; stream: false };
    };
  };
  pipelineRuns: {
    search: { method: "POST"; url: "/api/pipeline-runs/search"; params: never; query: never; body: never; response: { data: Run[] }; error: unknown; filterFields: "status" | "name"; stream: false };
  };
  orders: {
    list: { method: "GET"; url: "/api/orders"; params: never; query: import('@dudousxd/nestjs-filter-client').TypedFilterQuery<"total" | "state">; body: never; response: Order[]; error: unknown; filterFields: "total" | "state"; stream: false };
  };
};

/** Awaitable request handle. \`await api.x.y({...})\` runs the fetch; extensions add query/mutation helpers. */
type __Req<R> = {
  then<T1 = R, T2 = never>(
    onfulfilled?: ((value: R) => T1 | PromiseLike<T1>) | null,
    onrejected?: ((reason: unknown) => T2 | PromiseLike<T2>) | null,
  ): Promise<T1 | T2>;
  catch<T = never>(onrejected?: ((reason: unknown) => T | PromiseLike<T>) | null): Promise<R | T>;
  finally(onfinally?: (() => void) | null): Promise<R>;
  fetch(): Promise<R>;
};
function __req<R>(run: () => Promise<R>): __Req<R> {
  let __p: Promise<R> | undefined;
  const __promise = () => {
    __p ??= run();
    return __p;
  };
  return {
    then: (onfulfilled, onrejected) => __promise().then(onfulfilled, onrejected),
    catch: (onrejected) => __promise().catch(onrejected),
    finally: (onfinally) => __promise().finally(onfinally),
    fetch: run,
  };
}

export function createApi(fetcher: Fetcher) {
  return {
    users: {
      list: (input?: { query?: ApiRouter["users"]["list"]['query'] }) => ({
        ...__req<ApiRouter["users"]["list"]['response']>(() => fetcher.get<ApiRouter["users"]["list"]['response']>(route("users.list" as never) || "/api/users", { query: input?.query as Record<string, unknown> | undefined })),
      }),
      show: (input?: { params: ApiRouter["users"]["show"]['params']; query?: ApiRouter["users"]["show"]['query'] }) => ({
        ...__req<ApiRouter["users"]["show"]['response']>(() => fetcher.get<ApiRouter["users"]["show"]['response']>(route("users.show" as never, input?.params as never) || "/api/users/:id", { query: input?.query as Record<string, unknown> | undefined })),
      }),
      create: (input?: { body?: ApiRouter["users"]["create"]['body'] }) => ({
        ...__req<ApiRouter["users"]["create"]['response']>(() => fetcher.post<ApiRouter["users"]["create"]['response']>(route("users.create" as never) || "/api/users", { body: input?.body })),
      }),
      update: (input?: { params: ApiRouter["users"]["update"]['params']; body?: ApiRouter["users"]["update"]['body'] }) => ({
        ...__req<ApiRouter["users"]["update"]['response']>(() => fetcher.patch<ApiRouter["users"]["update"]['response']>(route("users.update" as never, input?.params as never) || "/api/users/:id", { body: input?.body })),
      }),
    },
    admin: {
      reports: {
        list: (input?: { query?: ApiRouter["admin"]["reports"]["list"]['query'] }) => ({
          ...__req<ApiRouter["admin"]["reports"]["list"]['response']>(() => fetcher.get<ApiRouter["admin"]["reports"]["list"]['response']>(route("admin.reports.list" as never) || "/api/admin/reports", { query: input?.query as Record<string, unknown> | undefined })),
        }),
      },
    },
    pipelineRuns: {
      search: (input?: Record<string, never>) => ({
        ...__req<ApiRouter["pipelineRuns"]["search"]['response']>(() => fetcher.post<ApiRouter["pipelineRuns"]["search"]['response']>(route("pipelineRuns.search" as never) || "/api/pipeline-runs/search", {})),
      }),
    },
    orders: {
      list: (input?: { query?: ApiRouter["orders"]["list"]['query'] }) => ({
        ...__req<ApiRouter["orders"]["list"]['response']>(() => fetcher.get<ApiRouter["orders"]["list"]['response']>(route("orders.list" as never) || "/api/orders", { query: input?.query as Record<string, unknown> | undefined })),
      }),
    },
  };
}

export type Api = ReturnType<typeof createApi>;

type _RouterAt<R, P extends string> = P extends \`\${infer Head}.\${infer Tail}\`
  ? Head extends keyof R ? _RouterAt<R[Head], Tail> : never
  : P extends keyof R ? R[P] : never;

type ResolveByName<K extends string, Field extends string> = _RouterAt<ApiRouter, K> extends infer R ? Field extends keyof R ? R[Field] : never : never;

type _LeafValues<T> = T extends { method: string; url: string }
  ? T
  : T extends object ? _LeafValues<T[keyof T]> : never;

type ResolveByPath<M extends string, U extends string, Field extends string> = _LeafValues<ApiRouter> extends infer L
  ? L extends { method: M; url: U }
    ? Field extends keyof L ? L[Field] : never
    : never
  : never;

export namespace Route {
  export type Response<K extends string> = ResolveByName<K, "response">;
  export type Body<K extends string> = ResolveByName<K, "body">;
  export type Query<K extends string> = ResolveByName<K, "query">;
  export type Params<K extends string> = ResolveByName<K, "params">;
  export type Error<K extends string> = ResolveByName<K, "error">;
  export type FilterFields<K extends string> = ResolveByName<K, "filterFields">;
  /** The streamed element type of an \`@Sse()\`/streaming route — the type yielded by its \`stream()\` AsyncIterable. */
  export type Stream<K extends string> = ResolveByName<K, "response">;
  export type Request<K extends string> = {
    body: Body<K>;
    query: Query<K>;
    params: Params<K>;
  };
}

export namespace Path {
  export type Response<M extends string, U extends string> = ResolveByPath<M, U, "response">;
  export type Body<M extends string, U extends string> = ResolveByPath<M, U, "body">;
  export type Query<M extends string, U extends string> = ResolveByPath<M, U, "query">;
  export type Params<M extends string, U extends string> = ResolveByPath<M, U, "params">;
  export type Error<M extends string, U extends string> = ResolveByPath<M, U, "error">;
  export type FilterFields<M extends string, U extends string> = ResolveByPath<M, U, "filterFields">;
  export type Stream<M extends string, U extends string> = ResolveByPath<M, U, "response">;
}
"
`;

exports[`emitApi golden output > empty routes 1`] = `
"// Generated by @dudousxd/nestjs-codegen. Do not edit.

import { route, ROUTES, type RouteName, type ExtractParams, type RouteParams } from './routes.js';
import type { Fetcher } from '@dudousxd/nestjs-client';

export type ApiRouter = Record<string, never>;

export function createApi(_fetcher: Fetcher): Record<string, never> {
  return {};
}
export type Api = ReturnType<typeof createApi>;

export namespace Route {
  export type Response<K extends string> = never;
  export type Body<K extends string> = never;
  export type Query<K extends string> = never;
  export type Params<K extends string> = never;
  export type Error<K extends string> = never;
  export type FilterFields<K extends string> = never;
  export type Stream<K extends string> = never;
  export type Request<K extends string> = { body: never; query: never; params: never };
}

export namespace Path {
  export type Response<M extends string, U extends string> = never;
  export type Body<M extends string, U extends string> = never;
  export type Query<M extends string, U extends string> = never;
  export type Params<M extends string, U extends string> = never;
  export type Error<M extends string, U extends string> = never;
  export type FilterFields<M extends string, U extends string> = never;
  export type Stream<M extends string, U extends string> = never;
}
"
`;

exports[`emitApi golden output > query: true (TanStack handles) 1`] = `
"// Generated by @dudousxd/nestjs-codegen. Do not edit.

import { queryOptions as _queryOptions, infiniteQueryOptions as _infiniteQueryOptions, mutationOptions as _mutationOptions } from '@tanstack/react-query';
import { route, ROUTES, type RouteName, type ExtractParams, type RouteParams } from './routes.js';
import type { Fetcher } from '@dudousxd/nestjs-client';

export type ApiRouter = {
  users: {
    list: { method: "GET"; url: "/api/users"; params: never; query: { active?: boolean }; body: never; response: User[]; error: unknown; filterFields: never; stream: false };
    show: { method: "GET"; url: "/api/users/:id"; params: { id: string }; query: never; body: never; response: User; error: unknown; filterFields: never; stream: false };
    create: { method: "POST"; url: "/api/users"; params: never; query: never; body: { name: string }; response: User; error: unknown; filterFields: never; stream: false };
    update: { method: "PATCH"; url: "/api/users/:id"; params: { id: string }; query: never; body: { name?: string }; response: User; error: unknown; filterFields: never; stream: false };
  };
  admin: {
    reports: {
      list: { method: "GET"; url: "/api/admin/reports"; params: never; query: never; body: never; response: Report[]; error: unknown; filterFields: never; stream: false };
    };
  };
  pipelineRuns: {
    search: { method: "POST"; url: "/api/pipeline-runs/search"; params: never; query: never; body: never; response: { data: Run[] }; error: unknown; filterFields: "status" | "name"; stream: false };
  };
  orders: {
    list: { method: "GET"; url: "/api/orders"; params: never; query: import('@dudousxd/nestjs-filter-client').TypedFilterQuery<"total" | "state">; body: never; response: Order[]; error: unknown; filterFields: "total" | "state"; stream: false };
  };
};

/** Awaitable request handle. \`await api.x.y({...})\` runs the fetch; extensions add query/mutation helpers. */
type __Req<R> = {
  then<T1 = R, T2 = never>(
    onfulfilled?: ((value: R) => T1 | PromiseLike<T1>) | null,
    onrejected?: ((reason: unknown) => T2 | PromiseLike<T2>) | null,
  ): Promise<T1 | T2>;
  catch<T = never>(onrejected?: ((reason: unknown) => T | PromiseLike<T>) | null): Promise<R | T>;
  finally(onfinally?: (() => void) | null): Promise<R>;
  fetch(): Promise<R>;
};
function __req<R>(run: () => Promise<R>): __Req<R> {
  let __p: Promise<R> | undefined;
  const __promise = () => {
    __p ??= run();
    return __p;
  };
  return {
    then: (onfulfilled, onrejected) => __promise().then(onfulfilled, onrejected),
    catch: (onrejected) => __promise().catch(onrejected),
    finally: (onfinally) => __promise().finally(onfinally),
    fetch: run,
  };
}

export function createApi(fetcher: Fetcher) {
  return {
    users: {
      list: (input?: { query?: ApiRouter["users"]["list"]['query'] }) => ({
        ...__req<ApiRouter["users"]["list"]['response']>(() => fetcher.get<ApiRouter["users"]["list"]['response']>(route("users.list" as never) || "/api/users", { query: input?.query as Record<string, unknown> | undefined })),
        queryKey: () => ["users.list", input] as const,
        queryOptions: () => _queryOptions({ queryKey: ["users.list", input] as const, queryFn: () => fetcher.get<ApiRouter["users"]["list"]['response']>(route("users.list" as never) || "/api/users", { query: input?.query as Record<string, unknown> | undefined }) }),
        infiniteQueryOptions: (overrides?: { getNextPageParam?: (lastPage: ApiRouter["users"]["list"]['response'], allPages: ApiRouter["users"]["list"]['response'][], lastPageParam: number, allPageParams: number[]) => number | null | undefined; getPreviousPageParam?: (firstPage: ApiRouter["users"]["list"]['response'], allPages: ApiRouter["users"]["list"]['response'][], firstPageParam: number, allPageParams: number[]) => number | null | undefined; initialPageParam?: number; [key: string]: unknown }) => _infiniteQueryOptions({ queryKey: ["users.list", input] as const, queryFn: ({ pageParam }: { pageParam: number }) => fetcher.get<ApiRouter["users"]["list"]['response']>(route("users.list" as never) || "/api/users", { query: { ...(input?.query ?? {}), page: pageParam } as Record<string, unknown> }), initialPageParam: overrides?.initialPageParam ?? 1, getNextPageParam: overrides?.getNextPageParam ?? ((lastPage: ApiRouter["users"]["list"]['response']) => { const meta = (lastPage as unknown as { meta?: { page?: number; lastPage?: number } })?.meta; if (meta?.page != null && meta?.lastPage != null) { return meta.page < meta.lastPage ? meta.page + 1 : undefined; } return undefined; }), getPreviousPageParam: overrides?.getPreviousPageParam, ...overrides }),
      }),
      show: (input?: { params: ApiRouter["users"]["show"]['params']; query?: ApiRouter["users"]["show"]['query'] }) => ({
        ...__req<ApiRouter["users"]["show"]['response']>(() => fetcher.get<ApiRouter["users"]["show"]['response']>(route("users.show" as never, input?.params as never) || "/api/users/:id", { query: input?.query as Record<string, unknown> | undefined })),
        queryKey: () => ["users.show", input] as const,
        queryOptions: () => _queryOptions({ queryKey: ["users.show", input] as const, queryFn: () => fetcher.get<ApiRouter["users"]["show"]['response']>(route("users.show" as never, input?.params as never) || "/api/users/:id", { query: input?.query as Record<string, unknown> | undefined }) }),
        infiniteQueryOptions: (overrides?: { getNextPageParam?: (lastPage: ApiRouter["users"]["show"]['response'], allPages: ApiRouter["users"]["show"]['response'][], lastPageParam: number, allPageParams: number[]) => number | null | undefined; getPreviousPageParam?: (firstPage: ApiRouter["users"]["show"]['response'], allPages: ApiRouter["users"]["show"]['response'][], firstPageParam: number, allPageParams: number[]) => number | null | undefined; initialPageParam?: number; [key: string]: unknown }) => _infiniteQueryOptions({ queryKey: ["users.show", input] as const, queryFn: ({ pageParam }: { pageParam: number }) => fetcher.get<ApiRouter["users"]["show"]['response']>(route("users.show" as never, input?.params as never) || "/api/users/:id", { query: { ...(input?.query ?? {}), page: pageParam } as Record<string, unknown> }), initialPageParam: overrides?.initialPageParam ?? 1, getNextPageParam: overrides?.getNextPageParam ?? ((lastPage: ApiRouter["users"]["show"]['response']) => { const meta = (lastPage as unknown as { meta?: { page?: number; lastPage?: number } })?.meta; if (meta?.page != null && meta?.lastPage != null) { return meta.page < meta.lastPage ? meta.page + 1 : undefined; } return undefined; }), getPreviousPageParam: overrides?.getPreviousPageParam, ...overrides }),
      }),
      create: (input?: { body?: ApiRouter["users"]["create"]['body'] }) => ({
        ...__req<ApiRouter["users"]["create"]['response']>(() => fetcher.post<ApiRouter["users"]["create"]['response']>(route("users.create" as never) || "/api/users", { body: input?.body })),
        queryKey: () => ["users.create", input] as const,
        mutationOptions: () => _mutationOptions({ mutationFn: (input?: { body?: ApiRouter["users"]["create"]['body'] }) => fetcher.post<ApiRouter["users"]["create"]['response']>(route("users.create" as never) || "/api/users", { body: input?.body }) }),
      }),
      update: (input?: { params: ApiRouter["users"]["update"]['params']; body?: ApiRouter["users"]["update"]['body'] }) => ({
        ...__req<ApiRouter["users"]["update"]['response']>(() => fetcher.patch<ApiRouter["users"]["update"]['response']>(route("users.update" as never, input?.params as never) || "/api/users/:id", { body: input?.body })),
        queryKey: () => ["users.update", input] as const,
        mutationOptions: () => _mutationOptions({ mutationFn: (input?: { params: ApiRouter["users"]["update"]['params']; body?: ApiRouter["users"]["update"]['body'] }) => fetcher.patch<ApiRouter["users"]["update"]['response']>(route("users.update" as never, input?.params as never) || "/api/users/:id", { body: input?.body }) }),
      }),
    },
    admin: {
      reports: {
        list: (input?: { query?: ApiRouter["admin"]["reports"]["list"]['query'] }) => ({
          ...__req<ApiRouter["admin"]["reports"]["list"]['response']>(() => fetcher.get<ApiRouter["admin"]["reports"]["list"]['response']>(route("admin.reports.list" as never) || "/api/admin/reports", { query: input?.query as Record<string, unknown> | undefined })),
          queryKey: () => ["admin.reports.list", input] as const,
          queryOptions: () => _queryOptions({ queryKey: ["admin.reports.list", input] as const, queryFn: () => fetcher.get<ApiRouter["admin"]["reports"]["list"]['response']>(route("admin.reports.list" as never) || "/api/admin/reports", { query: input?.query as Record<string, unknown> | undefined }) }),
          infiniteQueryOptions: (overrides?: { getNextPageParam?: (lastPage: ApiRouter["admin"]["reports"]["list"]['response'], allPages: ApiRouter["admin"]["reports"]["list"]['response'][], lastPageParam: number, allPageParams: number[]) => number | null | undefined; getPreviousPageParam?: (firstPage: ApiRouter["admin"]["reports"]["list"]['response'], allPages: ApiRouter["admin"]["reports"]["list"]['response'][], firstPageParam: number, allPageParams: number[]) => number | null | undefined; initialPageParam?: number; [key: string]: unknown }) => _infiniteQueryOptions({ queryKey: ["admin.reports.list", input] as const, queryFn: ({ pageParam }: { pageParam: number }) => fetcher.get<ApiRouter["admin"]["reports"]["list"]['response']>(route("admin.reports.list" as never) || "/api/admin/reports", { query: { ...(input?.query ?? {}), page: pageParam } as Record<string, unknown> }), initialPageParam: overrides?.initialPageParam ?? 1, getNextPageParam: overrides?.getNextPageParam ?? ((lastPage: ApiRouter["admin"]["reports"]["list"]['response']) => { const meta = (lastPage as unknown as { meta?: { page?: number; lastPage?: number } })?.meta; if (meta?.page != null && meta?.lastPage != null) { return meta.page < meta.lastPage ? meta.page + 1 : undefined; } return undefined; }), getPreviousPageParam: overrides?.getPreviousPageParam, ...overrides }),
        }),
      },
    },
    pipelineRuns: {
      search: (input?: Record<string, never>) => ({
        ...__req<ApiRouter["pipelineRuns"]["search"]['response']>(() => fetcher.post<ApiRouter["pipelineRuns"]["search"]['response']>(route("pipelineRuns.search" as never) || "/api/pipeline-runs/search", {})),
        queryKey: () => ["pipelineRuns.search", input] as const,
        queryOptions: () => _queryOptions({ queryKey: ["pipelineRuns.search", input] as const, queryFn: () => fetcher.post<ApiRouter["pipelineRuns"]["search"]['response']>(route("pipelineRuns.search" as never) || "/api/pipeline-runs/search", {}) }),
        mutationOptions: () => _mutationOptions({ mutationFn: (input?: Record<string, never>) => fetcher.post<ApiRouter["pipelineRuns"]["search"]['response']>(route("pipelineRuns.search" as never) || "/api/pipeline-runs/search", {}) }),
      }),
    },
    orders: {
      list: (input?: { query?: ApiRouter["orders"]["list"]['query'] }) => ({
        ...__req<ApiRouter["orders"]["list"]['response']>(() => fetcher.get<ApiRouter["orders"]["list"]['response']>(route("orders.list" as never) || "/api/orders", { query: input?.query as Record<string, unknown> | undefined })),
        queryKey: () => ["orders.list", input] as const,
        queryOptions: () => _queryOptions({ queryKey: ["orders.list", input] as const, queryFn: () => fetcher.get<ApiRouter["orders"]["list"]['response']>(route("orders.list" as never) || "/api/orders", { query: input?.query as Record<string, unknown> | undefined }) }),
        infiniteQueryOptions: (overrides?: { getNextPageParam?: (lastPage: ApiRouter["orders"]["list"]['response'], allPages: ApiRouter["orders"]["list"]['response'][], lastPageParam: number, allPageParams: number[]) => number | null | undefined; getPreviousPageParam?: (firstPage: ApiRouter["orders"]["list"]['response'], allPages: ApiRouter["orders"]["list"]['response'][], firstPageParam: number, allPageParams: number[]) => number | null | undefined; initialPageParam?: number; [key: string]: unknown }) => _infiniteQueryOptions({ queryKey: ["orders.list", input] as const, queryFn: ({ pageParam }: { pageParam: number }) => fetcher.get<ApiRouter["orders"]["list"]['response']>(route("orders.list" as never) || "/api/orders", { query: { ...(input?.query ?? {}), page: pageParam } as Record<string, unknown> }), initialPageParam: overrides?.initialPageParam ?? 1, getNextPageParam: overrides?.getNextPageParam ?? ((lastPage: ApiRouter["orders"]["list"]['response']) => { const meta = (lastPage as unknown as { meta?: { page?: number; lastPage?: number } })?.meta; if (meta?.page != null && meta?.lastPage != null) { return meta.page < meta.lastPage ? meta.page + 1 : undefined; } return undefined; }), getPreviousPageParam: overrides?.getPreviousPageParam, ...overrides }),
      }),
    },
  };
}

export type Api = ReturnType<typeof createApi>;

type _RouterAt<R, P extends string> = P extends \`\${infer Head}.\${infer Tail}\`
  ? Head extends keyof R ? _RouterAt<R[Head], Tail> : never
  : P extends keyof R ? R[P] : never;

type ResolveByName<K extends string, Field extends string> = _RouterAt<ApiRouter, K> extends infer R ? Field extends keyof R ? R[Field] : never : never;

type _LeafValues<T> = T extends { method: string; url: string }
  ? T
  : T extends object ? _LeafValues<T[keyof T]> : never;

type ResolveByPath<M extends string, U extends string, Field extends string> = _LeafValues<ApiRouter> extends infer L
  ? L extends { method: M; url: U }
    ? Field extends keyof L ? L[Field] : never
    : never
  : never;

export namespace Route {
  export type Response<K extends string> = ResolveByName<K, "response">;
  export type Body<K extends string> = ResolveByName<K, "body">;
  export type Query<K extends string> = ResolveByName<K, "query">;
  export type Params<K extends string> = ResolveByName<K, "params">;
  export type Error<K extends string> = ResolveByName<K, "error">;
  export type FilterFields<K extends string> = ResolveByName<K, "filterFields">;
  /** The streamed element type of an \`@Sse()\`/streaming route — the type yielded by its \`stream()\` AsyncIterable. */
  export type Stream<K extends string> = ResolveByName<K, "response">;
  export type Request<K extends string> = {
    body: Body<K>;
    query: Query<K>;
    params: Params<K>;
  };
}

export namespace Path {
  export type Response<M extends string, U extends string> = ResolveByPath<M, U, "response">;
  export type Body<M extends string, U extends string> = ResolveByPath<M, U, "body">;
  export type Query<M extends string, U extends string> = ResolveByPath<M, U, "query">;
  export type Params<M extends string, U extends string> = ResolveByPath<M, U, "params">;
  export type Error<M extends string, U extends string> = ResolveByPath<M, U, "error">;
  export type FilterFields<M extends string, U extends string> = ResolveByPath<M, U, "filterFields">;
  export type Stream<M extends string, U extends string> = ResolveByPath<M, U, "response">;
}
"
`;

exports[`emitApi golden output > tanstack with a custom queryImport 1`] = `
"// Generated by @dudousxd/nestjs-codegen. Do not edit.

import { queryOptions as _queryOptions, infiniteQueryOptions as _infiniteQueryOptions, mutationOptions as _mutationOptions } from '@tanstack/vue-query';
import { route, ROUTES, type RouteName, type ExtractParams, type RouteParams } from './routes.js';
import type { Fetcher } from '@dudousxd/nestjs-client';

export type ApiRouter = {
  users: {
    list: { method: "GET"; url: "/api/users"; params: never; query: { active?: boolean }; body: never; response: User[]; error: unknown; filterFields: never; stream: false };
    show: { method: "GET"; url: "/api/users/:id"; params: { id: string }; query: never; body: never; response: User; error: unknown; filterFields: never; stream: false };
    create: { method: "POST"; url: "/api/users"; params: never; query: never; body: { name: string }; response: User; error: unknown; filterFields: never; stream: false };
    update: { method: "PATCH"; url: "/api/users/:id"; params: { id: string }; query: never; body: { name?: string }; response: User; error: unknown; filterFields: never; stream: false };
  };
  admin: {
    reports: {
      list: { method: "GET"; url: "/api/admin/reports"; params: never; query: never; body: never; response: Report[]; error: unknown; filterFields: never; stream: false };
    };
  };
  pipelineRuns: {
    search: { method: "POST"; url: "/api/pipeline-runs/search"; params: never; query: never; body: never; response: { data: Run[] }; error: unknown; filterFields: "status" | "name"; stream: false };
  };
  orders: {
    list: { method: "GET"; url: "/api/orders"; params: never; query: import('@dudousxd/nestjs-filter-client').TypedFilterQuery<"total" | "state">; body: never; response: Order[]; error: unknown; filterFields: "total" | "state"; stream: false };
  };
};

/** Awaitable request handle. \`await api.x.y({...})\` runs the fetch; extensions add query/mutation helpers. */
type __Req<R> = {
  then<T1 = R, T2 = never>(
    onfulfilled?: ((value: R) => T1 | PromiseLike<T1>) | null,
    onrejected?: ((reason: unknown) => T2 | PromiseLike<T2>) | null,
  ): Promise<T1 | T2>;
  catch<T = never>(onrejected?: ((reason: unknown) => T | PromiseLike<T>) | null): Promise<R | T>;
  finally(onfinally?: (() => void) | null): Promise<R>;
  fetch(): Promise<R>;
};
function __req<R>(run: () => Promise<R>): __Req<R> {
  let __p: Promise<R> | undefined;
  const __promise = () => {
    __p ??= run();
    return __p;
  };
  return {
    then: (onfulfilled, onrejected) => __promise().then(onfulfilled, onrejected),
    catch: (onrejected) => __promise().catch(onrejected),
    finally: (onfinally) => __promise().finally(onfinally),
    fetch: run,
  };
}

export function createApi(fetcher: Fetcher) {
  return {
    users: {
      list: (input?: { query?: ApiRouter["users"]["list"]['query'] }) => ({
        ...__req<ApiRouter["users"]["list"]['response']>(() => fetcher.get<ApiRouter["users"]["list"]['response']>(route("users.list" as never) || "/api/users", { query: input?.query as Record<string, unknown> | undefined })),
        queryKey: () => ["users.list", input] as const,
        queryOptions: () => _queryOptions({ queryKey: ["users.list", input] as const, queryFn: () => fetcher.get<ApiRouter["users"]["list"]['response']>(route("users.list" as never) || "/api/users", { query: input?.query as Record<string, unknown> | undefined }) }),
        infiniteQueryOptions: (overrides?: { getNextPageParam?: (lastPage: ApiRouter["users"]["list"]['response'], allPages: ApiRouter["users"]["list"]['response'][], lastPageParam: number, allPageParams: number[]) => number | null | undefined; getPreviousPageParam?: (firstPage: ApiRouter["users"]["list"]['response'], allPages: ApiRouter["users"]["list"]['response'][], firstPageParam: number, allPageParams: number[]) => number | null | undefined; initialPageParam?: number; [key: string]: unknown }) => _infiniteQueryOptions({ queryKey: ["users.list", input] as const, queryFn: ({ pageParam }: { pageParam: number }) => fetcher.get<ApiRouter["users"]["list"]['response']>(route("users.list" as never) || "/api/users", { query: { ...(input?.query ?? {}), page: pageParam } as Record<string, unknown> }), initialPageParam: overrides?.initialPageParam ?? 1, getNextPageParam: overrides?.getNextPageParam ?? ((lastPage: ApiRouter["users"]["list"]['response']) => { const meta = (lastPage as unknown as { meta?: { page?: number; lastPage?: number } })?.meta; if (meta?.page != null && meta?.lastPage != null) { return meta.page < meta.lastPage ? meta.page + 1 : undefined; } return undefined; }), getPreviousPageParam: overrides?.getPreviousPageParam, ...overrides }),
      }),
      show: (input?: { params: ApiRouter["users"]["show"]['params']; query?: ApiRouter["users"]["show"]['query'] }) => ({
        ...__req<ApiRouter["users"]["show"]['response']>(() => fetcher.get<ApiRouter["users"]["show"]['response']>(route("users.show" as never, input?.params as never) || "/api/users/:id", { query: input?.query as Record<string, unknown> | undefined })),
        queryKey: () => ["users.show", input] as const,
        queryOptions: () => _queryOptions({ queryKey: ["users.show", input] as const, queryFn: () => fetcher.get<ApiRouter["users"]["show"]['response']>(route("users.show" as never, input?.params as never) || "/api/users/:id", { query: input?.query as Record<string, unknown> | undefined }) }),
        infiniteQueryOptions: (overrides?: { getNextPageParam?: (lastPage: ApiRouter["users"]["show"]['response'], allPages: ApiRouter["users"]["show"]['response'][], lastPageParam: number, allPageParams: number[]) => number | null | undefined; getPreviousPageParam?: (firstPage: ApiRouter["users"]["show"]['response'], allPages: ApiRouter["users"]["show"]['response'][], firstPageParam: number, allPageParams: number[]) => number | null | undefined; initialPageParam?: number; [key: string]: unknown }) => _infiniteQueryOptions({ queryKey: ["users.show", input] as const, queryFn: ({ pageParam }: { pageParam: number }) => fetcher.get<ApiRouter["users"]["show"]['response']>(route("users.show" as never, input?.params as never) || "/api/users/:id", { query: { ...(input?.query ?? {}), page: pageParam } as Record<string, unknown> }), initialPageParam: overrides?.initialPageParam ?? 1, getNextPageParam: overrides?.getNextPageParam ?? ((lastPage: ApiRouter["users"]["show"]['response']) => { const meta = (lastPage as unknown as { meta?: { page?: number; lastPage?: number } })?.meta; if (meta?.page != null && meta?.lastPage != null) { return meta.page < meta.lastPage ? meta.page + 1 : undefined; } return undefined; }), getPreviousPageParam: overrides?.getPreviousPageParam, ...overrides }),
      }),
      create: (input?: { body?: ApiRouter["users"]["create"]['body'] }) => ({
        ...__req<ApiRouter["users"]["create"]['response']>(() => fetcher.post<ApiRouter["users"]["create"]['response']>(route("users.create" as never) || "/api/users", { body: input?.body })),
        queryKey: () => ["users.create", input] as const,
        mutationOptions: () => _mutationOptions({ mutationFn: (input?: { body?: ApiRouter["users"]["create"]['body'] }) => fetcher.post<ApiRouter["users"]["create"]['response']>(route("users.create" as never) || "/api/users", { body: input?.body }) }),
      }),
      update: (input?: { params: ApiRouter["users"]["update"]['params']; body?: ApiRouter["users"]["update"]['body'] }) => ({
        ...__req<ApiRouter["users"]["update"]['response']>(() => fetcher.patch<ApiRouter["users"]["update"]['response']>(route("users.update" as never, input?.params as never) || "/api/users/:id", { body: input?.body })),
        queryKey: () => ["users.update", input] as const,
        mutationOptions: () => _mutationOptions({ mutationFn: (input?: { params: ApiRouter["users"]["update"]['params']; body?: ApiRouter["users"]["update"]['body'] }) => fetcher.patch<ApiRouter["users"]["update"]['response']>(route("users.update" as never, input?.params as never) || "/api/users/:id", { body: input?.body }) }),
      }),
    },
    admin: {
      reports: {
        list: (input?: { query?: ApiRouter["admin"]["reports"]["list"]['query'] }) => ({
          ...__req<ApiRouter["admin"]["reports"]["list"]['response']>(() => fetcher.get<ApiRouter["admin"]["reports"]["list"]['response']>(route("admin.reports.list" as never) || "/api/admin/reports", { query: input?.query as Record<string, unknown> | undefined })),
          queryKey: () => ["admin.reports.list", input] as const,
          queryOptions: () => _queryOptions({ queryKey: ["admin.reports.list", input] as const, queryFn: () => fetcher.get<ApiRouter["admin"]["reports"]["list"]['response']>(route("admin.reports.list" as never) || "/api/admin/reports", { query: input?.query as Record<string, unknown> | undefined }) }),
          infiniteQueryOptions: (overrides?: { getNextPageParam?: (lastPage: ApiRouter["admin"]["reports"]["list"]['response'], allPages: ApiRouter["admin"]["reports"]["list"]['response'][], lastPageParam: number, allPageParams: number[]) => number | null | undefined; getPreviousPageParam?: (firstPage: ApiRouter["admin"]["reports"]["list"]['response'], allPages: ApiRouter["admin"]["reports"]["list"]['response'][], firstPageParam: number, allPageParams: number[]) => number | null | undefined; initialPageParam?: number; [key: string]: unknown }) => _infiniteQueryOptions({ queryKey: ["admin.reports.list", input] as const, queryFn: ({ pageParam }: { pageParam: number }) => fetcher.get<ApiRouter["admin"]["reports"]["list"]['response']>(route("admin.reports.list" as never) || "/api/admin/reports", { query: { ...(input?.query ?? {}), page: pageParam } as Record<string, unknown> }), initialPageParam: overrides?.initialPageParam ?? 1, getNextPageParam: overrides?.getNextPageParam ?? ((lastPage: ApiRouter["admin"]["reports"]["list"]['response']) => { const meta = (lastPage as unknown as { meta?: { page?: number; lastPage?: number } })?.meta; if (meta?.page != null && meta?.lastPage != null) { return meta.page < meta.lastPage ? meta.page + 1 : undefined; } return undefined; }), getPreviousPageParam: overrides?.getPreviousPageParam, ...overrides }),
        }),
      },
    },
    pipelineRuns: {
      search: (input?: Record<string, never>) => ({
        ...__req<ApiRouter["pipelineRuns"]["search"]['response']>(() => fetcher.post<ApiRouter["pipelineRuns"]["search"]['response']>(route("pipelineRuns.search" as never) || "/api/pipeline-runs/search", {})),
        queryKey: () => ["pipelineRuns.search", input] as const,
        queryOptions: () => _queryOptions({ queryKey: ["pipelineRuns.search", input] as const, queryFn: () => fetcher.post<ApiRouter["pipelineRuns"]["search"]['response']>(route("pipelineRuns.search" as never) || "/api/pipeline-runs/search", {}) }),
        mutationOptions: () => _mutationOptions({ mutationFn: (input?: Record<string, never>) => fetcher.post<ApiRouter["pipelineRuns"]["search"]['response']>(route("pipelineRuns.search" as never) || "/api/pipeline-runs/search", {}) }),
      }),
    },
    orders: {
      list: (input?: { query?: ApiRouter["orders"]["list"]['query'] }) => ({
        ...__req<ApiRouter["orders"]["list"]['response']>(() => fetcher.get<ApiRouter["orders"]["list"]['response']>(route("orders.list" as never) || "/api/orders", { query: input?.query as Record<string, unknown> | undefined })),
        queryKey: () => ["orders.list", input] as const,
        queryOptions: () => _queryOptions({ queryKey: ["orders.list", input] as const, queryFn: () => fetcher.get<ApiRouter["orders"]["list"]['response']>(route("orders.list" as never) || "/api/orders", { query: input?.query as Record<string, unknown> | undefined }) }),
        infiniteQueryOptions: (overrides?: { getNextPageParam?: (lastPage: ApiRouter["orders"]["list"]['response'], allPages: ApiRouter["orders"]["list"]['response'][], lastPageParam: number, allPageParams: number[]) => number | null | undefined; getPreviousPageParam?: (firstPage: ApiRouter["orders"]["list"]['response'], allPages: ApiRouter["orders"]["list"]['response'][], firstPageParam: number, allPageParams: number[]) => number | null | undefined; initialPageParam?: number; [key: string]: unknown }) => _infiniteQueryOptions({ queryKey: ["orders.list", input] as const, queryFn: ({ pageParam }: { pageParam: number }) => fetcher.get<ApiRouter["orders"]["list"]['response']>(route("orders.list" as never) || "/api/orders", { query: { ...(input?.query ?? {}), page: pageParam } as Record<string, unknown> }), initialPageParam: overrides?.initialPageParam ?? 1, getNextPageParam: overrides?.getNextPageParam ?? ((lastPage: ApiRouter["orders"]["list"]['response']) => { const meta = (lastPage as unknown as { meta?: { page?: number; lastPage?: number } })?.meta; if (meta?.page != null && meta?.lastPage != null) { return meta.page < meta.lastPage ? meta.page + 1 : undefined; } return undefined; }), getPreviousPageParam: overrides?.getPreviousPageParam, ...overrides }),
      }),
    },
  };
}

export type Api = ReturnType<typeof createApi>;

type _RouterAt<R, P extends string> = P extends \`\${infer Head}.\${infer Tail}\`
  ? Head extends keyof R ? _RouterAt<R[Head], Tail> : never
  : P extends keyof R ? R[P] : never;

type ResolveByName<K extends string, Field extends string> = _RouterAt<ApiRouter, K> extends infer R ? Field extends keyof R ? R[Field] : never : never;

type _LeafValues<T> = T extends { method: string; url: string }
  ? T
  : T extends object ? _LeafValues<T[keyof T]> : never;

type ResolveByPath<M extends string, U extends string, Field extends string> = _LeafValues<ApiRouter> extends infer L
  ? L extends { method: M; url: U }
    ? Field extends keyof L ? L[Field] : never
    : never
  : never;

export namespace Route {
  export type Response<K extends string> = ResolveByName<K, "response">;
  export type Body<K extends string> = ResolveByName<K, "body">;
  export type Query<K extends string> = ResolveByName<K, "query">;
  export type Params<K extends string> = ResolveByName<K, "params">;
  export type Error<K extends string> = ResolveByName<K, "error">;
  export type FilterFields<K extends string> = ResolveByName<K, "filterFields">;
  /** The streamed element type of an \`@Sse()\`/streaming route — the type yielded by its \`stream()\` AsyncIterable. */
  export type Stream<K extends string> = ResolveByName<K, "response">;
  export type Request<K extends string> = {
    body: Body<K>;
    query: Query<K>;
    params: Params<K>;
  };
}

export namespace Path {
  export type Response<M extends string, U extends string> = ResolveByPath<M, U, "response">;
  export type Body<M extends string, U extends string> = ResolveByPath<M, U, "body">;
  export type Query<M extends string, U extends string> = ResolveByPath<M, U, "query">;
  export type Params<M extends string, U extends string> = ResolveByPath<M, U, "params">;
  export type Error<M extends string, U extends string> = ResolveByPath<M, U, "error">;
  export type FilterFields<M extends string, U extends string> = ResolveByPath<M, U, "filterFields">;
  export type Stream<M extends string, U extends string> = ResolveByPath<M, U, "response">;
}
"
`;
